# pretty_graph

./: Cargo.toml  LICENSE  README.md
src/: lib.rs  node.rs  node_body.rs  tests.rs
src/node/: construct.rs  link.rs  link_access.rs  node_by.rs  payload_access.rs  payload_ops.rs
src/node/map/: construct.rs  link.rs  payload.rs
src/node/universal/: link.rs  mod.rs  payload.rs
src/node/vector/: construct.rs  link.rs  mod.rs  payload.rs
src/node_body/map/: link.rs  mod.rs  payload.rs
src/node_body/universal/: link.rs  mod.rs  payload.rs
src/node_body/vector/: link.rs  mod.rs  payload.rs
src/sugar/: impl_universal.rs  mod.rs  traits.rs
