[package]
name = "pretty_graph"
version = "0.8.0"
edition = "2024"
license = "MIT"  
authors = ["Glab Strizhkov glabstrizhkov@gmail.com"]
documentation = "https://docs.rs/pretty_graph"
readme = "README.md"
homepage = "https://github.com/glabSdr/pretty_graph"
repository = "https://github.com/glabSdr/pretty_graph"
description = "pretty_graph provides simple toolbox to build and working with graphs"
keywords = ["graph"]
categories = ["data-structures"]
